--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </main>
   <div class="attribution mt-6">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://github.com/xgbdev">Guillermo</a>.
+    Coded by <a href="https://github.com/xgbdev<">Guillermo</a>.
   </div>
 </body>
 </html>
